--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,13 +20,8 @@ commands:
   setup-aws-credentials:
     description: "Configure AWS credentials"
     steps:
-      - run:
-          name: Configure AWS credentials
-          command: |
-            mkdir -p ~/.aws
-            echo "[default]" > ~/.aws/credentials
-            echo "aws_access_key_id = ${AWS_ACCESS_KEY_ID}" >> ~/.aws/credentials
-            echo "aws_secret_access_key = ${AWS_SECRET_ACCESS_KEY}" >> ~/.aws/credentials
+      - aws-cli/setup:
+        profile_name: default
 
   setup-ssh-key:
     description: "Configure SSH private key for Ansible"
