--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,11 @@ commands:
             pip install ansible ansible-lint boto3 botocore
             ansible-galaxy collection install amazon.aws
       - run:
+          name: Run ansible-lint
+          command: ansible-lint playbooks/deploy_datadog.yml
+      - run:
           name: Validate playbook syntax
-          command: ansible-playbook playbooks/deploy_datadog.yml --syntax-check -e "datadog_env=dev"
+          command: ansible-playbook playbooks/deploy_datadog.yml --syntax-check
       - run:
           name: Validate inventory
           command: ansible-inventory --graph
@@ -130,8 +133,15 @@ workflows:
   version: 2
   datadog-deployment:
     jobs:
-      # Validation job that runs on all branches and PRs
+      # Always run validation on PRs
       - validate:
+          filters:
+            # Run on all PRs
+            branches:
+              ignore: /.*/
+            # Run on all PRs
+            tags:
+              only: /.*/
           context: datadog
 
       # Development environment deployment
@@ -139,8 +149,12 @@ workflows:
           requires:
             - validate
           filters:
+            # Only run on dev branch, not on PRs
             branches:
               only: dev
+            # Don't run on tags
+            tags:
+              ignore: /.*/
           context: datadog
 
       # QA environment deployment
@@ -148,21 +162,46 @@ workflows:
           requires:
             - validate
           filters:
+            # Only run on qa branch, not on PRs
             branches:
               only: qa
+            # Don't run on tags
+            tags:
+              ignore: /.*/
           context: datadog
 
       # Production environment deployment
       - hold-prod:
           filters:
+            # Only run on main branch, not on PRs
             branches:
               only: main
+            # Don't run on tags
+            tags:
+              ignore: /.*/
           context: datadog
       - deploy-prod:
           requires:
             - validate
             - hold-prod
           filters:
+            # Only run on main branch, not on PRs
             branches:
               only: main
-          context: datadog＀
+            # Don't run on tags
+            tags:
+              ignore: /.*/
+          context: datadog
+
+  # Separate workflow for PR validation
+  pr-validation:
+    jobs:
+      - validate:
+          filters:
+            # Only run on PRs
+            branches:
+              ignore: /.*/
+            # Run on all PRs
+            tags:
+              only: /.*/
+          context: datadog
