add aws step in the config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ commands:
           command: |
             pip install ansible ansible-lint boto3 botocore
             ansible-galaxy collection install amazon.aws
+      - aws-cli/setup:
+        profile_name: default
       - run:
           name: Validate playbook syntax
           command: ansible-playbook playbooks/deploy_datadog.yml --syntax-check -e "datadog_env=dev"
