--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,9 @@ commands:
             pip install ansible ansible-lint boto3 botocore
             ansible-galaxy collection install amazon.aws
       - aws-cli/setup:
-         profile_name: default
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          AWS_REGION: us-east-1
       - run:
           name: Validate playbook syntax
           command: ansible-playbook playbooks/deploy_datadog.yml --syntax-check -e "datadog_env=dev"
