--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ commands:
           command: |
             pip install ansible boto3 botocore
             ansible-galaxy collection install amazon.aws
-      - setup-aws-credentials
+      - aws-cli/setup
       - setup-ssh-key
       - run:
           name: Deploy Datadog agent
