--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,6 +86,12 @@ jobs:
       - image: cimg/python:3.9
     steps:
       - checkout
+      - run:
+          name: Print AWS env vars
+          command: |
+            echo "AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID"
+            echo "AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY"
+            echo "AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION"
       - validate-datadog-config
 
   hold-prod:
